--- a/Call Center Cleanup.ipynb
+++ b/Call Center Cleanup.ipynb
@@ -39,15 +39,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "49aada97",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import the appropriate libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sb\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import style\n",
     "\n",
-    "\n",
-    "# Create two new dataframes"
+    "# Create two new dataframes\n",
+    "north_df = pd.read_csv('NorthCallCenter.csv')\n",
+    "south_df = pd.read_csv('SouthCallCenter.csv')\n"
    ]
   },
   {
@@ -66,12 +72,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "05a06a1f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "north branch reps count  9\n",
+      "north branch avg busy mins  9.987755102040817\n",
+      "north branch avg not ready mins  1.9142857142857144\n",
+      "north branch avg incoming wait time  3.048780487804878\n",
+      "north branch avg during call wait time  2.9673469387755103\n",
+      "north branch num calls taken by time block\n",
+      " Time Block\n",
+      "10:00 AM    43\n",
+      "11:00 AM    25\n",
+      "12:00 PM    45\n",
+      "1:00 PM     17\n",
+      "2:00 PM     35\n",
+      "3:00 PM     30\n",
+      "4:00 PM     28\n",
+      "5:00 PM     17\n",
+      "9:00 AM      5\n",
+      "Name: Calls, dtype: int64\n",
+      "\n",
+      "south branch reps count  11\n",
+      "south branch avg busy mins  10.054140127388536\n",
+      "south branch avg not ready mins  1.910828025477707\n",
+      "south branch avg incoming wait time  3.0\n",
+      "south branch avg during call wait time  3.0764331210191083\n",
+      "south branch num calls taken by time block\n",
+      " Time Block\n",
+      "10:00 AM    56\n",
+      "11:00 AM    31\n",
+      "12:00 PM    75\n",
+      "1:00 PM     23\n",
+      "2:00 PM     30\n",
+      "3:00 PM     43\n",
+      "4:00 PM     25\n",
+      "5:00 PM     26\n",
+      "9:00 AM      5\n",
+      "Name: Calls, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# Put your EDA code here"
+    "# Put your EDA code here\n",
+    "col_rep_id = 'Rep ID'\n",
+    "col_busy_minutes = 'Busy Minutes'\n",
+    "col_not_ready_mins = 'Not Ready Minutes'\n",
+    "col_incoming_wait_time = 'Incoming Wait Time'\n",
+    "col_during_call_wait_time = 'During Call Wait Time'\n",
+    "col_time_block = 'Time Block'\n",
+    "col_calls = 'Calls'\n",
+    "\n",
+    "def explore_and_print_branch_data(df, label):\n",
+    "    reps_count = len(pd.unique(df[col_rep_id]))\n",
+    "    avg_busy_mins = df[col_busy_minutes].mean()\n",
+    "    avg_not_ready_mins = df[col_not_ready_mins].mean()\n",
+    "    avg_incoming_wait_time = df[col_incoming_wait_time].mean()\n",
+    "    avg_during_call_wait_time = df[col_during_call_wait_time].mean()\n",
+    "    num_calls_by_block = df.groupby(col_time_block)[col_calls].sum()\n",
+    "    \n",
+    "    print(f'{label} branch reps count ', reps_count)\n",
+    "    print(f'{label} branch avg busy mins ', avg_busy_mins)\n",
+    "    print(f'{label} branch avg not ready mins ', avg_not_ready_mins)\n",
+    "    print(f'{label} branch avg incoming wait time ', avg_incoming_wait_time)\n",
+    "    print(f'{label} branch avg during call wait time ', avg_during_call_wait_time)\n",
+    "    print(f'{label} branch num calls taken by time block\\n', num_calls_by_block)\n",
+    "\n",
+    "# North branch\n",
+    "explore_and_print_branch_data(north_df, 'north')\n",
+    "\n",
+    "# South branch\n",
+    "print('') # for spacing\n",
+    "explore_and_print_branch_data(south_df, 'south')"
    ]
   },
   {
@@ -83,9 +160,43 @@
     "\n",
     "Make note of your results here!\n",
     "\n",
-    "1. How many reps are in each branch?\n",
+    "1. How many reps are in each branch? \n",
+    "north branch reps count  9\n",
+    "south branch reps count  11\n",
+    "\n",
     "2. What is the average busy minutes, not ready minutes, incoming wait time, and during call wait time for each branch?\n",
-    "3. What is the number of calls taken for each time block?"
+    "north branch avg busy mins  9.987755102040817\n",
+    "north branch avg not ready mins  1.9142857142857144\n",
+    "north branch avg incoming wait time  3.048780487804878\n",
+    "north branch avg during call wait time  2.9673469387755103\n",
+    "\n",
+    "south branch avg busy mins  10.054140127388536\n",
+    "south branch avg not ready mins  1.910828025477707\n",
+    "south branch avg incoming wait time  3.0\n",
+    "south branch avg during call wait time  3.0764331210191083\n",
+    "\n",
+    "3. What is the number of calls taken for each time block?\n",
+    " Time Block\n",
+    "10:00 AM    43\n",
+    "11:00 AM    25\n",
+    "12:00 PM    45\n",
+    "1:00 PM     17\n",
+    "2:00 PM     35\n",
+    "3:00 PM     30\n",
+    "4:00 PM     28\n",
+    "5:00 PM     17\n",
+    "9:00 AM      5\n",
+    "\n",
+    " Time Block\n",
+    "10:00 AM    56\n",
+    "11:00 AM    31\n",
+    "12:00 PM    75\n",
+    "1:00 PM     23\n",
+    "2:00 PM     30\n",
+    "3:00 PM     43\n",
+    "4:00 PM     25\n",
+    "5:00 PM     26\n",
+    "9:00 AM      5"
    ]
   },
   {
@@ -105,12 +216,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "id": "b50cfa8a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "North grouped by call type\n",
+      "                      Unnamed: 0  Branch  Call Purpose  Time Block  Queue  \\\n",
+      "Incoming or Outgoing                                                        \n",
+      "Incoming                      82      82            82          82     82   \n",
+      "Outgoing                     163     163           163         163    163   \n",
+      "\n",
+      "                      Rep ID  Sale  Lost Call  Abandoned  Busy Minutes  \\\n",
+      "Incoming or Outgoing                                                     \n",
+      "Incoming                  82    82         82         82            82   \n",
+      "Outgoing                 163   163        163        163           163   \n",
+      "\n",
+      "                      Not Ready Minutes  Incoming Wait Time  \\\n",
+      "Incoming or Outgoing                                          \n",
+      "Incoming                             82                  82   \n",
+      "Outgoing                            163                   0   \n",
+      "\n",
+      "                      During Call Wait Time  Calls  \n",
+      "Incoming or Outgoing                                \n",
+      "Incoming                                 82     82  \n",
+      "Outgoing                                163    163  \n",
+      "\n",
+      "South grouped by call type\n",
+      "                      Unnamed: 0  Branch  Call Purpose  Time Block  Queue  \\\n",
+      "Incoming or Outgoing                                                        \n",
+      "Incoming                     126     126           126         126    126   \n",
+      "Outgoing                     188     188           188         188    188   \n",
+      "\n",
+      "                      Rep ID  Sale  Lost Call  Abandoned  Busy Minutes  \\\n",
+      "Incoming or Outgoing                                                     \n",
+      "Incoming                 126   126        126        126           126   \n",
+      "Outgoing                 188   188        188        188           188   \n",
+      "\n",
+      "                      Not Ready Minutes  Incoming Wait Time  \\\n",
+      "Incoming or Outgoing                                          \n",
+      "Incoming                            126                 126   \n",
+      "Outgoing                            188                   0   \n",
+      "\n",
+      "                      During Call Wait Time  Calls  \n",
+      "Incoming or Outgoing                                \n",
+      "Incoming                                126    126  \n",
+      "Outgoing                                188    188  \n",
+      "\n",
+      "north duplicates count  0\n",
+      "south duplicates count  0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Clean your data here"
+    "# Clean your data here\n",
+    "col_call_type = 'Incoming or Outgoing'\n",
+    "    \n",
+    "north_grouped_by_call_type = north_df.groupby(col_call_type).count()\n",
+    "print('North grouped by call type')\n",
+    "print(north_grouped_by_call_type)\n",
+    "\n",
+    "south_grouped_by_call_type = south_df.groupby(col_call_type).count()\n",
+    "print('\\nSouth grouped by call type')\n",
+    "print(south_grouped_by_call_type)\n",
+    "\n",
+    "print('')\n",
+    "north_no_duplicates = north_df.drop_duplicates()\n",
+    "print('north duplicates count ', north_df.size - north_no_duplicates.size)\n",
+    "\n",
+    "south_no_duplicates = south_df.drop_duplicates()\n",
+    "print('south duplicates count ', south_df.size - south_no_duplicates.size)"
    ]
   },
   {
@@ -123,8 +301,13 @@
     "Make note of your results!\n",
     "\n",
     "1. Incoming wait time is null in many places. Do all of those places correspond to outgoing calls?\n",
+    "Yes, for the North branch dataset, the incoming wait time is 0 where the call type is Outgoing. Same for the South branch dataset. I got this result by grouping the dataset by call type and called count on the grouped dataframe and printed it. In the print out, I saw that the incoming wait time was 0 where the call type is 'Outgoing'.\n",
+    "\n",
     "2. In the North data set, there are two separate \"YES\" values for a sale. Why and how did you rectify the issue?\n",
+    "\n",
     "3. Are there duplicates in the two data sets? If there are, how did you handle them?\n",
+    "No, there are no duplicates in the North and South datasets. I arrived at this by dropping the duplicates in the datasets, and subtracting the size of the full and deduplicated dataframes and for both North and South, the difference was 0.\n",
+    "\n",
     "4. Is any of the data in the two data sets unnecessary? If yes, how did you handle it?"
    ]
   },
@@ -145,12 +328,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "id": "ea8fe600",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'col_calls' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9416/3052744876.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Manipulate data here\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mmerged_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnorth_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msouth_df\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmerged_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcol_rep_id\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mby\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcol_calls\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'col_calls' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# Manipulate data here"
+    "# Manipulate data here\n",
+    "merged_df = pd.concat([north_df, south_df])\n",
+    "g = merged_df.groupby(col_rep_id).sum().sort_values(by=col_calls)"
    ]
   },
   {
@@ -323,7 +522,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -337,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
